# musicl

./: .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2025-09-28-035534-0000_create_songs/: up.sql
src/: cli.rs  commands.rs  ctx.rs  lib.rs  main.rs  models.rs  schema.rs
src/commands/: add.rs  archive.rs  play.rs  playlist.rs  remove.rs  setup.rs  sync.rs  unarchive.rs
