[package]
name = "musicl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive", "env"] }
diesel = { version = "2.3.2", features = ["sqlite"] }
libsqlite3-sys = { version = "0.24", features = ["bundled"] } #added manually
dotenvy = "0.15.7"
rand = "0.9.2"
